--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
             content: () => {
               return ` 
               <div class="aboutContent">
-              <div class="goHome">&#10065</div>
+              <div class="goHome"><p><i class="sh-home"></i></p></div>
               <br><br><br>
               <h1>About</h1>
               <p>My name is Minas and I live in the Netherlands.
                 I enjoy creating interactive user interfaces for both mobile and desktop with all modern javascript frameworks and libriaries, even though I prefer react for web and react-native for mobile apps as front end solutions. From server side prespective I keep the javascript stack and  use node.js with mongoose in order to talk to a mongoDB database. While web development is my favourite game, I do enjoy messing around with fields such as UI design, graphic design, video editing.</p>
-              <br><br><hr><br><br><br>
+               <br><br><br><br><hr><br><br><br>
               <h1>Skills</h1>
               <div class="skills">
               ${myFirstRouter.routes[1].skillsContent
@@ -202,7 +202,7 @@
             content: () => {
               return `
               <div class="contactContent">
-              <div class="goHome">&#10065</div>
+              <div class="goHome"><p><i class="sh-home"></i></p></div>
               <br><br><br><br>
               <p>Feel free to contact me anytime , I will do my best to reply as soon as possible.<br>
               Send me an email by clicking here <a href="mailto:minasxirak@gmail.com">minasxirak@gmail.com</a>
